[backport] Clean up Shenandoah configurations in shared tests